Guardar Excel temporal
**Resumen:**
Se implementó la funcionalidad para **generar y guardar** un archivo Excel de forma **temporal** usando `@capacitor/filesystem`. Esto es parte del flujo para enviar archivos por correo electrónico con `@capacitor/share`.

**Cambios realizados:**
- 📁 Nueva función `generarYGuardarExcelTemporal()`.
- 📄 El Excel se guarda en caché con nombre único.
- ✅ Integración en el botón "Enviar" para generar el archivo.
- 🔔 Feedback visual al usuario (éxito / error).

🚧 Próximo paso: integrar `@capacitor/share` para permitir el envío por correo.

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@capacitor/android": "^7.4.2",
     "@capacitor/cli": "^7.4.2",
     "@capacitor/core": "^7.4.2",
+    "@capacitor/filesystem": "^7.1.4",
     "@capacitor/preferences": "^7.0.1",
     "@quasar/extras": "^1.16.4",
     "@tabler/icons-vue": "^3.34.1",
