--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "dependencies": {
     "@capacitor/android": "^7.4.2",
+    "@capacitor/camera": "^7.0.2",
     "@capacitor/cli": "^7.4.2",
     "@capacitor/core": "^7.4.2",
     "@capacitor/filesystem": "^7.1.4",
@@ -26,6 +27,7 @@
     "@capacitor/share": "^7.0.2",
     "@quasar/extras": "^1.16.4",
     "@tabler/icons-vue": "^3.34.1",
+    "@zxing/library": "^0.21.3",
     "pinia": "^3.0.1",
     "quasar": "^2.16.0",
     "vue": "^3.4.18",
