--- a/capacitor.config.json
+++ b/capacitor.config.json
@@ -1,6 +1,6 @@
 {
   "appId": "bitacora.v2",
-  "appName": "Bitacora 2 App",
+  "appName": "Bitácora II",
   "webDir": "dist/spa",
   "bundledWebRuntime": false
 }
