--- a/capacitor.config.json
+++ b/capacitor.config.json
@@ -2,5 +2,14 @@
   "appId": "bitacora.v2",
   "appName": "Bitácora II",
   "webDir": "dist/spa",
-  "bundledWebRuntime": false
+  "bundledWebRuntime": false,
+  "plugins": {
+    "SplashScreen": {
+      "launchShowDuration": 2000,
+      "backgroundColor": "#ffffff",
+      "showSpinner": false,
+      "splashFullScreen": true,
+      "splashImmersive": true
+    }
+  }
 }
