--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "@quasar/extras": "^1.16.4",
     "@tabler/icons-vue": "^3.34.1",
     "@zxing/library": "^0.21.3",
+    "docx": "^9.5.1",
+    "jsbarcode": "^3.12.1",
     "pinia": "^3.0.1",
     "quasar": "^2.16.0",
     "vue": "^3.4.18",
