--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@zxing/library": "^0.21.3",
     "docx": "^9.5.1",
     "jsbarcode": "^3.12.1",
+    "jspdf": "^3.0.3",
     "pinia": "^3.0.1",
     "quasar": "^2.16.0",
     "vue": "^3.4.18",
