--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -7,6 +7,9 @@
     <!-- Permisos de internet para AdMob -->
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+    
+    <!-- Permiso de AD_ID para AdMob (Android 13+) -->
+    <uses-permission android:name="com.google.android.gms.permission.AD_ID"/>
 
     <application
         android:allowBackup="true"
@@ -17,7 +20,7 @@
         android:theme="@style/AppTheme"
         android:hardwareAccelerated="true">
 
-        <!-- META-DATA DE ADMOB (ID de prueba) -->
+        <!-- META-DATA DE ADMOB -->
         <meta-data
             android:name="com.google.android.gms.ads.APPLICATION_ID"
             android:value="ca-app-pub-7620083100302566~8925637552"/>
