--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "@capacitor/cli": "^7.4.2",
     "@capacitor/core": "^7.4.2",
     "@capacitor/filesystem": "^7.1.4",
-    "@capacitor/keyboard": "^6.0.2",
+    "@capacitor/keyboard": "^7.0.4",
     "@capacitor/preferences": "^7.0.1",
     "@capacitor/share": "^7.0.2",
     "@capacitor/splash-screen": "^7.0.3",
@@ -35,6 +35,7 @@
     "docx": "^9.5.1",
     "jsbarcode": "^3.12.1",
     "jspdf": "^3.0.3",
+    "jszip": "^3.10.1",
     "pinia": "^3.0.1",
     "quasar": "^2.16.0",
     "vue": "^3.4.18",
