Módulo fotos productos - 4
Módulo completo para gestión de fotos de productos con captura optimizada y exportación automática.

Funcionalidades principales:
- Captura de fotos con cámara trasera en aspect ratio 4:3
- Redimensionamiento automático a 800x600 píxeles en formato JPG
- Buscador inteligente integrado para asignar códigos de productos
- Sistema de captura múltiple con vista previa
- Lista/tabla de fotos con miniaturas y gestión completa
- Edición de códigos con buscador inteligente
- Detección de códigos duplicados con resaltado visual
- Generación automática de archivo ZIP con nomenclatura: "Fotos [Usuario] AAAA-MM-DD HH-MM.zip"
- Nombres de archivo: código del producto como nombre (ej: BRP160021004.jpg)
- Detección de entorno: descarga directa en PC, Share API en móvil
- Orientación bloqueada en vertical durante captura
- Modo simulación para desarrollo en PC sin cámara real
- Diseño responsive: tabla en desktop, cards en móvil
- Persistencia automática entre sesiones
- Integración completa con sistema de navegación y configuración

Componentes nuevos:
- src/pages/PaginaFotos.vue
- src/components/Logica/Fotos/CamaraFotos.vue
- src/components/Logica/Fotos/TablaFotos.vue
- src/components/Logica/Fotos/GeneradorZipFotos.js
- src/components/Logica/Fotos/CompartirArchivo.js
- src/components/Modales/ModalEditarFoto.vue
- src/components/BaseDeDatos/usoAlmacenamientoFotos.js

Dependencias agregadas:
- jszip: Compresión de archivos
- @capacitor/screen-orientation: Bloqueo de rotación

Integraciones:
- Panel de inicio con nueva tarjeta "Fotos"
- Drawer con acceso directo al módulo
- Ruta /fotos agregada al sistema de navegación
- Reutilización de CodigoMasNombre.vue para búsqueda inteligente
- Sistema de configuración de usuario para nombres de archivo

--- a/android/app/capacitor.build.gradle
+++ b/android/app/capacitor.build.gradle
@@ -13,7 +13,9 @@ dependencies {
     implementation project(':capacitor-community-camera-preview')
     implementation project(':capacitor-camera')
     implementation project(':capacitor-filesystem')
+    implementation project(':capacitor-keyboard')
     implementation project(':capacitor-preferences')
+    implementation project(':capacitor-screen-orientation')
     implementation project(':capacitor-share')
     implementation project(':capacitor-splash-screen')
 
