--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "bit-cora-2-app",
-  "version": "4.2.4",
+  "version": "4.2.5",
   "description": "Aplicación móvil para registrar tareas y actividades diarias.",
   "productName": "Bitácora 2",
-  "author": "Leonardo Núñez <jorgebike.75@hotmail.com>",
+  "author": "Leonardo",
   "type": "module",
   "private": true,
   "scripts": {
