--- a/src-capacitor/package.json
+++ b/src-capacitor/package.json
@@ -1,8 +1,8 @@
 {
   "name": "bit-cora-2-app",
-  "version": "0.0.1",
+  "version": "4.2.4",
   "description": "Aplicación móvil para registrar tareas y actividades diarias.",
-  "author": "Leonardo Núñez <jorgebike.75@hotmail.com>",
+  "author": "Leonardo",
   "private": true,
   "dependencies": {
     "@capacitor/android": "^7.4.2",
